CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(should C)

SET(should_VERSION_MAJOR 0)
SET(should_VERSION_MINOR 5)

SET(SHOULD_SRCS should.c)
SET(SHOULD_HEADERS should.h)

ADD_LIBRARY(should STATIC ${SHOULD_SRCS})

INCLUDE_DIRECTORIES(.)

INSTALL(TARGETS should
    LIBRARY DESTINATION lib
    ARCHIVE DESTINATION lib)

INSTALL(FILES ${SHOULD_HEADERS} DESTINATION "include/should")
